--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -74,9 +74,9 @@ admin_34 : "فشل الامر !."
 # Bot 
 
 # Start
-start_1 : "شكرًا لاستضافتي في {0}. \n {1} ما زال حيًا.  \n\n للحصول على أي مساعدة، تحقق من مجموعة الدعم والقناة."
+start_1 : "**شكرًا لاستضافتي الي {0}.** \n**انا بوت اختصاصـي تشغيل الأغاني في المكالمات الصوتية** \n\n**لمعرفة كيفة استخدامي وطريقة التشغيل اكتب الاوامر او تفعيل**\n\n.**إذا واجهت مشكله تواصل مع مطور البوت** @FHK_M5."
 start_2 : "** اهلين فيـك عمـري في بوت لنـدا ♪**\n\nوضيفتي  تشغيـل  الاغاني في الدردشة الجماعية الخاصة بالمجوعات والقنوات\n\n» للاستفسار  تواصل مع مطور البوت » @FH_KN"
-start_3 : "مرحبا بـ {0}\n\n لا احتاج أي  **اذونات مشرفين ** للعمل ( حتى أطلب منك ذلك ).\n\n يوزر المساعد :- @{1}\nايدي المساعد:- {2}"
+start_3 : "** شكرًا لاستضافتي الي مجموعتك** \n\n **لكي تستطيع استخدامي قم برفعي مشرف وكتب شغلي + أسم الاغنيه**.\n\n  **لمعرفة طريقة التشغيل اكتب الاوامر**\n\n **إذا واجهت مشكله تواصل مع مطور البوت** @FHK_M5 \nيوزر المساعد :- @{1}\nايدي المساعد:- {2}"
 start_4 : "نورت المجموعة عزيزي المطور {0} [{1}]."
 start_5 : "انضم عضو من {0} المطورين [{1}] للتو إلى محادثتك."
 start_6 : "❗️ **احتاج ان تكون المجموعة خارقة** ❗️\n\nالرجاء تحويل  **مجموعتك** الى **مجموعة خارقة** ثم أضفني مجددا هنا .\n\n **كيف أحول المجموعة خارقة ؟ ?**\n✅ اجعل سجل المحادثات  **ظاهر ** اولا."
@@ -228,7 +228,7 @@ queue_4 : "⏳ اضيفت للقائمه كـ **#{0}\n\n💡العنوان:** {1
 queue_5 : "لا توجد سوى اغنية واحدة في في القائمه ، الرجاء تشغيل المزيد أولا "
 
 # All Streaming Lines
-stream_1 : "» **يتـم تشغيـل طلبك**❗\n» **بواسطة:** {0}\n» **معلومات اڪثر:**[اضغط هنا]({1})"
+stream_1 : "» **يتـم تشغيـل طلبك**❗\n» **بواسطة:**  {3}}\n» **معلومات اڪثر:**[اضغط هنا]({1})"
 stream_2 : "**يتـم التشغيـل من الرابط ** 💡\n\n👤**طلبت بواسطة:** {0}"
 stream_3 : "**يتـم التشغيـل** 💡\n\n**🏷العنوان:** {0}\n⌛️**المدة**: {1}\n👤**طلبت من :** {2}"
 stream_4 : "**يتـم التشغيـل** 💡\n\n**🏷العنوان:** [{0}]({1})\n⌛️**المدة**: {2}\n👤**بطلب من:** {3}"
@@ -238,7 +238,7 @@ stream_4 : "**يتـم التشغيـل** 💡\n\n**🏷العنوان:** [{0}](
 #General Buttons
 CLOSE_BUTTON  : "⭒ اغـلاق ⭒"
 CLOSEMENU_BUTTON  : "⭒ اغـلاق ⭒"
-SOURCE_DRAGON : "⭒𝙲𝙷𝙰𝙽𝙽𝙴𝙻⭒"
+SOURCE_DRAGON : "⭒التحديثات⭒"
 BACK_BUTTON : "⭒ رجـوع ⭒"
 UNBAN_BUTTON : "⭒ الغاء الحظر ⭒"
 
@@ -246,14 +246,14 @@ UNBAN_BUTTON : "⭒ الغاء الحظر ⭒"
 L_B_1 : "« الذهاب للخاص »"
 
 # Start
-S_B_1 : "𝙲𝙾𝙼𝙼𝙰𝙽𝙳𝚂"
-S_B_2 : "𝚂𝙴𝚃𝚃𝙸𝙽𝙶𝚂"
-S_B_3 : "𝙲𝙷𝙰𝙽𝙽𝙴𝙻¹"
-S_B_4 : "𝙲𝙷𝙰𝙽𝙽𝙴𝙻²"
-S_B_5 : "𝙰𝙳𝙳 𝙼𝙴 𝚃𝙾 𝚃𝙷𝙴 𝙶𝚁𝙾𝚄𝙿"
+S_B_1 : "⭒ الاوامر ⭒"
+S_B_2 : "⭒ الاعدادات ⭒"
+S_B_3 : "⭒ التحديثات ⭒"
+S_B_4 : ""
+S_B_5 : "⭒ ضيفني لقروبك ⭒"
 S_B_6 : ""
-S_B_7 : "𝙳𝙴𝚅𝙴𝙻𝙾𝙿𝙴𝚁"
-S_B_8 : "𝙲𝙾𝙼𝙼𝙰𝙽𝙳𝚂"
+S_B_7 : "⭒ المطـور ⭒"
+S_B_8 : "⭒ الاوامر ⭒"
 S_B_9 : ""
 DR_AG_ON : ""
 
